Fix layout issue on issues pages
Proof that negative margins are evil, in case you ever doubted it.

--- a/app/assets/stylesheets/_display.scss
+++ b/app/assets/stylesheets/_display.scss
@@ -727,7 +727,6 @@ td.links {
 
 .prev-next {
   font-size: smaller;
-  margin-top: -1em;
   text-align: right;
 }
 
